# bmw-finder

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-squash.yml
src/: app.rs  config.rs  legacy.rs  main.rs  search.rs  vehicle.rs
src/bmw/search/: dto.rs  mod.rs
