[package]
name = "bmw_finder"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to search for BMW cars in stock with advanced filtering options."

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
futures = "0.3.31"
itertools = "0.14.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
